Fix: Multiple render configs to avoid Python pre-deploy
- Changed service name to 'resume-upload-system' in render.yaml to force new config
- Updated render-clean.yaml with correct preDeployCommand: npx prisma migrate deploy
- Added render-upload.yaml as nuclear option with completely fresh service name
- All configs use Node.js runtime with Prisma migrations instead of Python/Alembic
- Build successful: ✓ Compiled in 59.6s, ready for clean deployment

--- a/render-clean.yaml
+++ b/render-clean.yaml
@@ -1,11 +1,13 @@
 services:
   - type: web
-    name: resume-matcher-clean
+    name: upload-system-v2
     runtime: node
     plan: free
     rootDir: apps/backend-clean
-    buildCommand: npm ci && npm run build
-    startCommand: npm start
+    buildCommand: npm install && npm run build
+    startCommand: npm start -p $PORT
+    preDeployCommand: npx prisma migrate deploy
+    healthCheckPath: /api/health
     autoDeploy: true
     envVars:
       - key: NODE_ENV
