Fix: Multiple Render deployment solutions for Python pre-deploy issue
PROBLEM: Render tries to run Python/Alembic instead of Node.js/Prisma
CAUSE: Runtime mismatch - Python pre-deploy command cached in old service

SOLUTIONS PROVIDED:
1. render-fresh.yaml - Complete new service 'nextjs-file-upload-api'
2. render-simple.yaml - Simple service without pre-deploy command
3. migrate.js - Manual Node.js migration script
4. package.json - Added 'npm run migrate' script

Based on Render troubleshooting docs:
- Use correct Node.js runtime (not Python)
- Create new service to avoid cached Python config
- Build successful: ✓ 59.6s, ready for clean Node.js deployment

--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start -p 4000",
+    "migrate": "node migrate.js",
     "postinstall": "prisma generate"
   },
   "dependencies": {
