Fix: instanceCount -> numInstances for Render

--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     buildCommand: npm install && npm run build
     startCommand: npm start -p $PORT
     preDeployCommand: npx prisma migrate deploy
-    instanceCount: 1
+    numInstances: 1
     healthCheckPath: /api/health
     autoDeploy: true
     plan: free
@@ -22,8 +22,6 @@ services:
         fromDatabase:
           name: resume-matcher-db
           property: connectionString
-      - key: ADMIN_PASSWORD
-        sync: false
       - key: UPLOAD_DIR
         value: /opt/render/project/src/uploads
 
