--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: resume-upload-system
+    name: upload-system-clean-v2
     runtime: node
     rootDir: apps/backend-clean
     buildCommand: npm install && npm run build && npx prisma migrate deploy
@@ -14,13 +14,13 @@ services:
         value: production
       - key: DATABASE_URL
         fromDatabase:
-          name: resume-matcher-db
+          name: upload-db-clean-v2
           property: connectionString
       - key: UPLOAD_DIR
         value: /tmp/uploads
 
 databases:
-  - name: resume-matcher-db
+  - name: upload-db-clean-v2
     databaseName: resume_matcher_db
     user: resume_user
     plan: free
