SIMPLIFIED: Remove health check, database deps, add basic homepage - MINIMAL SETUP

--- a/render.yaml
+++ b/render.yaml
@@ -3,25 +3,11 @@ services:
     name: upload-system-clean-v2
     runtime: node
     rootDir: apps/backend-clean
-    buildCommand: npm install && npm run build && npx prisma migrate deploy
-    startCommand: npm start -p $PORT
-    healthCheckPath: /api/health
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     autoDeployTrigger: commit
     plan: free
     region: oregon
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DATABASE_URL
-        fromDatabase:
-          name: upload-db-clean-v2
-          property: connectionString
-      - key: UPLOAD_DIR
-        value: /tmp/uploads
-
-databases:
-  - name: upload-db-clean-v2
-    databaseName: resume_matcher_db
-    user: resume_user
-    plan: free
-    region: oregon
