COMPLETE PRODUCTION SETUP: Proper health check with DB, correct migration scripts, healthCheckPath enabled

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     rootDir: apps/backend-clean
     buildCommand: npm install && npm run build && npx prisma migrate deploy
     startCommand: npm start
+    healthCheckPath: /api/health
     autoDeployTrigger: commit
     plan: free
     region: oregon
