--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start -p ${PORT:-4000}",
-    "migrate": "node migrate.js",
+    "migrate": "prisma migrate deploy",
+    "db:generate": "prisma generate",
     "postinstall": "prisma generate"
   },
   "dependencies": {
