MAJOR FIX: Found ALL problems - Environment variables, PORT syntax, Admin token, Docker health check - COMPLETE SOLUTION

--- a/render.yaml
+++ b/render.yaml
@@ -15,8 +15,10 @@ services:
         fromDatabase:
           name: upload-db-clean-v2
           property: connectionString
-      - key: UPLOAD_DIR
-        value: /tmp/uploads
+      - key: FILES_DIR
+        value: /var/data
+      - key: ADMIN_TOKEN
+        generateValue: true
 
 databases:
   - name: upload-db-clean-v2
