--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "start": "next start -p ${PORT:-4000}",
+    "start": "next start -p 4000",
     "migrate": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "postinstall": "prisma generate"
