--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -4,24 +4,25 @@
   "description": "Clean Next.js Upload System Backend",
   "scripts": {
     "dev": "next dev",
-    "build": "next build", 
+    "build": "next build",
     "start": "next start",
     "migrate": "prisma migrate deploy",
     "db:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0",
-    "next": "^15.3.0",
-    "prisma": "^5.20.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "@prisma/client": "5.20.0",
+    "next": "15.5.2",
+    "prisma": "5.20.0",
+    "react": "18.3.0",
+    "react-dom": "18.3.0"
   },
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
-    "typescript": "^5.6.0"
+    "@types/node": "22.0.0",
+    "@types/react": "18.3.0",
+    "@types/react-dom": "18.3.0",
+    "typescript": "5.6.0"
   },
   "engines": {
     "node": ">=18.0.0"
