--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -9,7 +9,8 @@
     "migrate": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "postinstall": "prisma generate",
-    "typecheck": "tsc --noEmit"
+  "typecheck": "tsc --noEmit",
+  "test": "tsx --test ./apps/backend-clean/tests"
   },
   "dependencies": {
     "@prisma/client": "5.20.0",
@@ -22,7 +23,8 @@
     "@types/node": "22.0.0",
     "@types/react": "18.3.0",
     "@types/react-dom": "18.3.0",
-    "typescript": "5.6.0"
+    "typescript": "5.6.0",
+    "tsx": "4.19.1"
   },
   "engines": {
     "node": ">=18.0.0"
