test: use glob pattern for tests

--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -10,7 +10,7 @@
     "db:generate": "prisma generate",
     "postinstall": "prisma generate",
   "typecheck": "tsc --noEmit",
-  "test": "tsx --test ./tests"
+  "test": "tsx --test \"tests/**/*.ts\""
   },
   "dependencies": {
     "@prisma/client": "5.20.0",
