--- a/apps/backend-clean/Dockerfile
+++ b/apps/backend-clean/Dockerfile
@@ -51,4 +51,7 @@ RUN chmod +x /app/entrypoint.sh
 
 RUN npm prune --omit=dev
 
+HEALTHCHECK --interval=30s --timeout=5s --start-period=15s --retries=3 \
+	CMD wget -q -O /dev/null "http://127.0.0.1:${PORT:-3000}/api/health" || exit 1
+
 ENTRYPOINT ["/app/entrypoint.sh"]
