--- a/apps/backend-clean/package.json
+++ b/apps/backend-clean/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+  "start": "node scripts/wait-db-migrate.js && next start -p ${PORT:-3000}",
     "migrate": "prisma migrate deploy",
     "db:generate": "prisma generate",
     "postinstall": "prisma generate",
