chore(vercel): deploy apps/frontend via root vercel.json (force UI changes live)

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
+	"framework": "nextjs",
 	"builds": [
 		{ "src": "apps/frontend/package.json", "use": "@vercel/next" }
 	],
-	"installCommand": "cd apps/frontend && npm ci"
+	"installCommand": "cd apps/frontend && npm ci",
+	"buildCommand": "cd apps/frontend && npm run build"
 }
