--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-	"framework": "nextjs",
 	"builds": [
 		{ "src": "apps/frontend/package.json", "use": "@vercel/next" }
 	],
-	"installCommand": "cd apps/frontend && npm ci",
-	"buildCommand": "cd apps/frontend && npm run build"
+	"installCommand": "cd apps/frontend && npm ci"
 }
