--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,5 +1,12 @@
 {
+  "version": 2,
   "framework": "nextjs",
   "installCommand": "npm ci",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "functions": {
+    "app/api/**/*.ts": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
