Fix Vercel build error: Remove invalid runtime configuration

--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,12 +1,5 @@
 {
-  "version": 2,
   "framework": "nextjs",
   "installCommand": "npm ci",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "buildCommand": "npm run build"
 }
