Fix Vercel build path: Add rootDirectory and correct package.json structure

--- a/package.json
+++ b/package.json
@@ -1,23 +1,14 @@
 {
-    "name": "resume-matcher",
-    "version": "0.0.1",
-    "description": "Veridis Quo.",
-    "private": true,
-    "packageManager": "npm@10.8.1",
-    "scripts": {
-        "install": "cd apps/backend-clean && npm install",
-        "dev": "cd apps/backend-clean && npm run dev",
-        "build": "cd apps/backend-clean && npm run build",
-        "start": "cd apps/backend-clean && npm start",
-        "lint:frontend": "cd apps/frontend && npm run lint",
-        "lint": "npm run lint:frontend",
-        "generate:api": "node scripts/generate-openapi.mjs"
-    },
-    "devDependencies": {
-        "concurrently": "^9.1.2",
-        "openapi-typescript": "^7.4.4"
-    },
-    "dependencies": {
-        "next-auth": "^5.0.0-beta.22"
-    }
+  "name": "resume-matcher",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "cd apps/frontend && npm run dev",
+    "build": "cd apps/frontend && npm run build",
+    "start": "cd apps/frontend && npm run start",
+    "install": "cd apps/frontend && npm install"
+  },
+  "workspaces": [
+    "apps/frontend"
+  ]
 }
