Fix npm ci error: Simplify package.json and add vercel.json to frontend

--- a/apps/frontend/vercel.json
+++ b/apps/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next"
+  "buildCommand": "npm ci && npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm ci"
 }
