Fix Vercel build: Add root vercel.json with correct paths and build script

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "resume-matcher",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "cd apps/frontend && npm run build"
+  },
   "workspaces": [
     "apps/frontend"
   ]
